# crossnection_mvp

./: README.md  add_debug_logging.py  app.py  console_ui.py  context_before_run.json  create_correlated_data.py  debug_app.py  debug_context_config.py  debug_context_store.py  debug_inspect_data.py  debug_kpi_check.py  fix_stat_engine.py  pdf_generator.py  pyproject.toml  report.md  run_crossnection.py  simplified_app.py
examples/: drivers_metadata.json  process_map.json
examples/driver_csvs/: pressure.csv  speed.csv  temperature.csv  unified_dataset.csv
flow_data/20250517T213302Z/: metadata.json  narrative_draft.v1.json
flow_data/20250517T214648Z/: metadata.json  narrative_draft.v1.json
flow_data/20250518T172945Z/: metadata.json
flow_data/20250518T173319Z/: metadata.json
flow_data/20250518T173832Z/: metadata.json
flow_data/20250518T174304Z/: metadata.json  narrative_draft.v1.json
flow_data/20250518T175901Z/: metadata.json  narrative_draft.v3.json
flow_data/20250518T181133Z/: metadata.json
flow_data/20250518T181520Z/: metadata.json
flow_data/20250518T181901Z/: correlation_matrix.v4.json  metadata.json  narrative_draft.v1.json  unified_dataset.v4.csv
flow_data/20250518T182944Z/: metadata.json  narrative_draft.v1.json
flow_data/20250518T183415Z/: metadata.json  root_cause_report.v1.json
flow_data/20250519T161907Z/: metadata.json
flow_data/20250519T162842Z/: metadata.json
flow_data/20250519T163621Z/: metadata.json  narrative_draft.v1.json
flow_data/20250519T181214Z/: metadata.json  narrative_draft.v1.json  unified_dataset.v3.csv  unified_dataset.v4.csv
flow_data/20250519T181905Z/: metadata.json  (+2 more)
reports/: root_cause_report_20250520_113858.md  root_cause_report_20250520_114344.md
tests/: integration_test.py
token_usage_logs/: usage_summary.json
(+90 files in other folders)
