# Root‑Cause Discovery MVP – build configuration (Hatchling)

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crossnection-mvp"
version = "0.1.0"
description = "Root‑Cause Discovery MVP built with CrewAI multi‑agent architecture (DataAgent, StatsAgent, ExplainAgent)."
authors = [{ name = "Marco Pericci", email = "marco@marcopericci.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"

# Runtime dependencies
dependencies = [
  "crewai>=0.5.0,<1.0.0",
  "pandas>=2.2.0,<3.0.0",
  "scipy>=1.12.0,<2.0.0",
  "statsmodels>=0.14,<1.0",
  "great_expectations>=0.17.22,<1.0",
  "matplotlib>=3.8,<4.0",
  "python-dotenv>=1.0,<2.0"
]

[project.optional-dependencies]
# Development tooling
dev = [
  "black>=24.3",
  "ruff>=0.4",
  "pytest>=8.2",
  "pytest-cov>=5.0"
]

[project.urls]
Repository = "https://github.com/crossnection/mvp"
Documentation = "https://crossnection.ai/docs"

[project.scripts]
# CLI entry‑point → `crossnection`
crossnection = "crossnection.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["crossnection"]
